@@ -48,7 +48,7 @@ $(SPECL):
 	  '#!/bin/sh'							\
 	  '# DO NOT EDIT - This file is generated by specs/specs.mk'	\
 	  ': $${LUA_PATH=";"}'						\
-	  'LUA_PATH="$(srcdir)/lib/?.lua;$$LUA_PATH" bin/specl "$$@"'	\
+	  'LUA_PATH="$(srcdir)/lib/?.lua;$$LUA_PATH" $(srcdir)/bin/specl "$$@"'	\
 	  'exit $$?';							\
 	} > $@
 	$(AM_V_at)chmod 555 '$@'
